--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "Plugin"
   ],
   "author": "Ahmet Köşker",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "source-map-loader": "^3.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0"
+  }
 }
